fix: fixing typo endpoint user
